// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleLink renders the correct mark-up - collapsed 1`] = `
.emotion-0 {
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  background: #f5f6fa;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a5568;
}

.emotion-0:hover {
  background: rgba(0,0,0,0.1);
}

@media screen and (min-width:640px) {
  .emotion-0 {
    margin-bottom: 0.5rem;
  }

  .emotion-0:last-of-type {
    margin-bottom: 0;
  }
}

.emotion-0.active {
  color: var(--primary);
  background: #ffffff;
}

.emotion-0 i {
  font-size: 1.5rem;
  opacity: 1;
}

.emotion-0 span {
  display: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  padding: 0 0.75rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','Roboto', 'Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans', 'Helvetica Neue',sans-serif;
}

@media screen and (min-width:640px) {
  .emotion-0 span {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<CollapsibleLink
  expanded={false}
  icons={
    Array [
      "las la-fw la-ship",
    ]
  }
  label="Projects"
  to="/projects"
>
  <NavLink
    className="emotion-0"
    exact={true}
    title="Projects"
    to="/projects"
  >
    <Link
      aria-current={null}
      className="emotion-0"
      title="Projects"
      to={
        Object {
          "hash": "",
          "pathname": "/projects",
          "search": "",
          "state": null,
        }
      }
    >
      <LinkAnchor
        aria-current={null}
        className="emotion-0"
        href="/projects"
        navigate={[Function]}
        title="Projects"
      >
        <a
          aria-current={null}
          className="emotion-0"
          href="/projects"
          onClick={[Function]}
          title="Projects"
        >
          <i
            aria-hidden="true"
            className="las la-fw la-ship"
          />
        </a>
      </LinkAnchor>
    </Link>
  </NavLink>
</CollapsibleLink>
`;

exports[`CollapsibleLink renders the correct mark-up - expanded 1`] = `
.emotion-0 {
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  background: #f5f6fa;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a5568;
}

.emotion-0:hover {
  background: rgba(0,0,0,0.1);
}

@media screen and (min-width:640px) {
  .emotion-0 {
    margin-bottom: 0.5rem;
  }

  .emotion-0:last-of-type {
    margin-bottom: 0;
  }
}

.emotion-0.active {
  color: var(--primary);
  background: #ffffff;
}

.emotion-0 i {
  font-size: 1.5rem;
  opacity: 1;
}

.emotion-0 span {
  display: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  padding: 0 0.75rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','Roboto', 'Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans', 'Helvetica Neue',sans-serif;
}

@media screen and (min-width:640px) {
  .emotion-0 span {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<CollapsibleLink
  expanded={true}
  icons={
    Array [
      "las la-fw la-ship",
    ]
  }
  label="Projects"
  to="/projects"
>
  <NavLink
    className="emotion-0"
    exact={true}
    title="Projects"
    to="/projects"
  >
    <Link
      aria-current={null}
      className="emotion-0"
      title="Projects"
      to={
        Object {
          "hash": "",
          "pathname": "/projects",
          "search": "",
          "state": null,
        }
      }
    >
      <LinkAnchor
        aria-current={null}
        className="emotion-0"
        href="/projects"
        navigate={[Function]}
        title="Projects"
      >
        <a
          aria-current={null}
          className="emotion-0"
          href="/projects"
          onClick={[Function]}
          title="Projects"
        >
          <i
            aria-hidden="true"
            className="las la-fw la-ship"
          />
          <span>
            Projects
          </span>
        </a>
      </LinkAnchor>
    </Link>
  </NavLink>
</CollapsibleLink>
`;
